force-app/main/default/objects/Event_Type__c/Event_Type__c.object-meta.xml
<CustomObject>
    <description>Bookable meeting template defining duration, rules, and host configuration</description>
    <label>Event Type</label>
    <nameField>
        <label>Event Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>