force-app/main/default/objects/Event_Type__c/fields/Booking_Limit_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Booking_Limit_Per_Day__c</fullName>
    <description>Maximum bookings per day for this event type</description>
    <label>Booking Limit Per Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>