force-app/main/default/objects/Event_Type__c/fields/Booking_Limit_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Booking_Limit_Per_Week__c</fullName>
    <label>Booking Limit Per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>