force-app/main/default/objects/Event_Type__c/fields/Booking_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Booking_Window_Days__c</fullName>
    <description>How many days into the future bookings can be made</description>
    <label>Booking Window (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>