force-app/main/default/objects/Event_Type__c/fields/Buffer_Before_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Before_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Buffer time before the event in minutes</description>
    <label>Buffer Before (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>