force-app/main/default/objects/Event_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description shown on the booking page</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>