force-app/main/default/objects/Event_Type__c/fields/Disable_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Cancellation</label>
    <type>Checkbox</type>
</CustomField>