force-app/main/default/objects/Event_Type__c/fields/Disable_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Disable_Rescheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Rescheduling</label>
    <type>Checkbox</type>
</CustomField>