force-app/main/default/objects/Event_Type__c/fields/Duration_Limit_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Duration_Limit_Per_Day__c</fullName>
    <description>Maximum total booked minutes per day</description>
    <label>Duration Limit Per Day (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>