force-app/main/default/objects/Event_Type__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this event type is visible and bookable</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>