force-app/main/default/objects/Event_Type__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Default meeting location (video link, phone, address)</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>