force-app/main/default/objects/Event_Type__c/fields/Max_Bookings_Per_Booker__c.field-meta.xml
<CustomField>
    <fullName>Max_Bookings_Per_Booker__c</fullName>
    <description>Maximum active bookings allowed per booker email</description>
    <label>Max Bookings Per Booker</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>