force-app/main/default/objects/Event_Type__c/fields/Min_Booking_Notice_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Min_Booking_Notice_Minutes__c</fullName>
    <defaultValue>120</defaultValue>
    <description>Minimum advance notice required for booking in minutes</description>
    <label>Minimum Booking Notice (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>