force-app/main/default/objects/Event_Type__c/fields/Multiple_Durations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Durations__c</fullName>
    <description>Comma-separated list of offered durations (e.g. 15,30,60). Overrides Duration_Minutes when set.</description>
    <label>Multiple Durations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>