force-app/main/default/objects/Event_Type__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>The host user who owns this event type</description>
    <label>Host</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Event Types</relationshipLabel>
    <relationshipName>Event_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>