force-app/main/default/objects/Event_Type__c/fields/Requires_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether bookings require host confirmation before being accepted</description>
    <label>Requires Confirmation</label>
    <type>Checkbox</type>
</CustomField>