force-app/main/default/objects/Event_Type__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schedule override for this event type</description>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Event Types</relationshipLabel>
    <relationshipName>Event_Types</relationshipName>
    <type>Lookup</type>
</CustomField>