force-app/main/default/objects/Event_Type__c/fields/Scheduling_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Type__c</fullName>
    <description>How hosts are assigned for team events</description>
    <label>Scheduling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>true</default><label>Individual</label></value>
            <value><fullName>Round_Robin</fullName><default>false</default><label>Round Robin</label></value>
            <value><fullName>Collective</fullName><default>false</default><label>Collective</label></value>
            <value><fullName>Managed</fullName><default>false</default><label>Managed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>