force-app/main/default/objects/Event_Type__c/fields/Seats_Per_Slot__c.field-meta.xml
<CustomField>
    <fullName>Seats_Per_Slot__c</fullName>
    <description>Number of attendees allowed per time slot (null = unlimited single booking)</description>
    <label>Seats Per Slot</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>