force-app/main/default/objects/Event_Type__c/fields/Slot_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Slot_Interval_Minutes__c</fullName>
    <description>Granularity of offered time slots in minutes</description>
    <label>Slot Interval (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>