force-app/main/default/objects/Event_Type__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <description>URL-friendly identifier for booking page</description>
    <externalId>true</externalId>
    <label>Slug</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>