force-app/main/default/objects/Event_Type__c/fields/Success_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Success_Redirect_URL__c</fullName>
    <label>Success Redirect URL</label>
    <type>Url</type>
</CustomField>