force-app/main/default/objects/Event_Type__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Event Types</relationshipLabel>
    <relationshipName>Event_Types</relationshipName>
    <type>Lookup</type>
</CustomField>