force-app/main/default/objects/Event_Type__c/validationRules/Buffers_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Buffers_Non_Negative</fullName>
    <active>true</active>
    <description>Buffer times cannot be negative</description>
    <errorConditionFormula>OR(
    Buffer_Before_Minutes__c &lt; 0,
    Buffer_After_Minutes__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Buffer times cannot be negative</errorMessage>
</ValidationRule>