force-app/main/default/objects/Event_Type__c/validationRules/Duration_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Positive</fullName>
    <active>true</active>
    <description>Duration must be a positive number</description>
    <errorConditionFormula>Duration_Minutes__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Duration_Minutes__c</errorDisplayField>
    <errorMessage>Duration must be greater than zero</errorMessage>
</ValidationRule>